# DeformCTMovement

./: .gitignore  AGENTS.md  HOWTO.md  README.md  plan_deform.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/hooks/: session.json
.github/skills/implement-deform-phase/: SKILL.md
exampledata/: mock_motion_3states.csv
exampledata/motion_063/: MotionData_fraction01.xml
gendosecalc/: __init__.py
gendosecalc/deform/: __init__.py  apply_deformation.py  bone_mask.py  cli.py  dicom_export.py  dvf_generate.py  dvf_io.py  models.py  motion_io.py  motion_select.py  pipeline.py  rtstruct_deform.py  sitk_bridge.py  structures.py
runs/fraction01_10states/: manifest.json
runs/mock_3states/: manifest.json
tests/deform/: __init__.py  conftest.py  test_apply_deformation.py  test_bone_mask.py  test_dicom_export.py  test_dvf_generate.py  test_dvf_io.py  test_localized_dvf.py  test_motion_io.py  test_motion_select.py  test_sitk_bridge.py
viewer/: __init__.py  app.py
